--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ background: #f1f1f1;
 &nbsp;
 <div class="text"><em>2013</em><div class="fade"></div></div>
 
-<p><a>MUSIC</a></p>
+<p><a href="http://bblacksh.github.io/2013/">MUSIC</a></p>
 
 
 </body>
