--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ height: 330;
 }
 
 a {
-background: #f7f7f7;
+background: #f1f1f1;
 text-transform: none;
 }
 
 a:hover {
-background: #f1f1f1;
+background: #fcfcfc;
 }
 
 
@@ -69,7 +69,7 @@ background: #f1f1f1;
 &nbsp;
 <div class="text"><em>2013</em><div class="fade"></div></div>
 
-<p><a href="http://bblacksh.github.io/2013/">MUSIC</a></p>
+<h1><a href="http://bblacksh.github.io/2013/">MUSIC</a></h1>
 
 
 </body>
