--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ background: #fcfcfc;
 &nbsp;
 <div class="text"><em>2013</em><div class="fade"></div></div>
 
-<h1><a href="http://bblacksh.github.io/2013/">MUSIC</a></h1>
+<p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
 
 
 </body>
