--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ background: #fcfcfc;
 &nbsp;
 <div class="text"><em>2013</em><div class="fade"></div></div>
 
-<p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
-<p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
-<p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
+<p><a><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
+<p><a><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
+<p><a><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
 
 
 
