--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ text-transform: none;
 }
 
 a:hover {
-background: #fcfcfc;
+background: #f9f9f9;
 }
 
 
@@ -69,7 +69,7 @@ background: #fcfcfc;
 &nbsp;
 <div class="text"><em>2013</em><div class="fade"></div></div>
 
-<p><a><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
+<p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
 <p><a><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
 <p><a><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
 
