--- a/index.html
+++ b/index.html
@@ -55,11 +55,17 @@ height: 330;
 
 a {
 background: #f1f1f1;
-text-transform: none;
+text-transform: none !important;
+color: #212121;
+display: block;
 }
 
 a:hover {
 background: #f9f9f9;
+text-transform: none !important;
+color: #212121;
+display: block;
+position: absolute;
 }
 
 
