--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ width: 50%;
 position: absolute;
 background: linear-gradient(to top, rgba(255,255,255,0) 72%, #f9f9f9 82%, #f9f9f9);
 top: 0;
-width: 100%;
+width: 50%;
 height: 100%;
 }
 
@@ -57,15 +57,14 @@ a {
 background: #f1f1f1;
 text-transform: none !important;
 color: #212121;
-display: block;
+border-bottom: none !important;
 }
 
 a:hover {
 background: #f9f9f9;
 text-transform: none !important;
 color: #212121;
-display: block;
-position: absolute;
+border-bottom: none !important;
 }
 
 
