--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ width: 50%;
 position: absolute;
 background: linear-gradient(to top, rgba(255,255,255,0) 72%, #f9f9f9 82%, #f9f9f9);
 top: 0;
-width: 50%;
+width: 100%;
 height: 100%;
 }
 
@@ -65,6 +65,9 @@ background: #f9f9f9;
 text-transform: none !important;
 color: #212121;
 border-bottom: none !important;
+}
+a:hover div{
+width: 0%;
 }
 
 
