--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ height: 100%;
 position: relative;
 font-size: 24px;
 text-align: center;
+width: 100%;
 }
 
 .s {
@@ -54,17 +55,14 @@ height: 330;
 }
 
 a {
-background: #f1f1f1;
-text-transform: none !important;
+text-decoration: none;
 color: #212121;
-border-bottom: none !important;
 }
 
 a:hover {
 background: #f9f9f9;
-text-transform: none !important;
+text-decoration: none;
 color: #212121;
-border-bottom: none !important;
 }
 a:hover div{
 width: 0%;
@@ -75,7 +73,7 @@ width: 0%;
 </head>
 <body bgcolor="#F9F9F9" left:margin="0" topmargin="0" marginwidth="100px" marginheight="20">
 &nbsp;
-<div class="text"><em>2013</em><div class="fade"></div></div>
+<div class="text"><em><strong>2013</strong></em><div class="fade"></div></div>
 
 <p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
 <p><a><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
