--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ position: relative;
 font-size: 24px;
 text-align: center;
 width: 100%;
+height: 100%;
 }
 
 .s {
@@ -73,7 +74,7 @@ width: 0%;
 </head>
 <body bgcolor="#F9F9F9" left:margin="0" topmargin="0" marginwidth="100px" marginheight="20">
 &nbsp;
-<div class="text"><em><strong>2013</strong></em><div class="fade"></div></div>
+<div class="text"><em>2013</em></div>
 
 <p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
 <p><a><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
