--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@ width: 0%;
 <div class="text"><em>2013</em></div>
 
 <p><a href="http://bblacksh.github.io/2013/"><div class="text"><em>MUSIC</em><div class="fade"></div></div></a></p>
+<p><a href="http://bblacksh.github.io/reads"><div class="text"><em>READS</em><div class="fade"></div></div></a></p>
 <p><a href="http://bblacksh.github.io/foods/"><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
-<p><a><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
+<p><a href=""><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
+<p><a href=""><div class="text"><em>REALIZATIONS</em><div class="fade"></div></div></a></p>
+<p><a href=""><div class="text"><em>LOVE</em><div class="fade"></div></div></a></p>
+
 
 
 
