--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ width: 0%;
 <p><a href="http://bblacksh.github.io/foods/"><div class="text"><em>FOOD</em><div class="fade"></div></div></a></p>
 <p><a href=""><div class="text"><em>VIDEO</em><div class="fade"></div></div></a></p>
 <p><a href=""><div class="text"><em>REALIZATIONS</em><div class="fade"></div></div></a></p>
-<p><a href=""><div class="text"><em>LOVE</em><div class="fade"></div></div></a></p>
+<p><a href="http://bblacksh.github.io/Sand-Poem"><div class="text"><em>LOVE</em><div class="fade"></div></div></a></p>
 
 
 
